fix image in user booking pan overflow

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -186,6 +186,7 @@
 
 .user-booking-image {
     width: 40%;
+    height: 100%;
     margin-right:50px;
     overflow: hidden;
     box-shadow: 5px 5px 5px grey
